Actualizando la versión de Hive a 4.0.0 por incompatibilidad con Java 11